# cell-counting

./: .gitignore  Launch Cell Counter (Windows).bat  Launch Cell Counter (macOS).command  README.md  environment.yml  main.py  napari_gui.py  pyproject.toml  requirements.txt  segmentation.py  test_cellpose.py  tk_app.py
core/: baseline.py  cellpose_segmentation.py
src/napari_cell_counter/: __init__.py  __main__.py  _reader.py  _widget.py  axes.py  counting.py  export.py  io_nd2.py  launch.py  napari.yaml  pipeline.py  projection.py  remote.py  roi.py  segmentation.py
tests/: test_core_logic.py  test_pipeline.py
